<resources>
    <string name="app_name">Atomic</string>
    <string name="personalization_settings">Personalization</string>
    <string name="app_version" translatable="false">v4.3.1m-Build.193</string>
    <string name="next_sale_start" translatable="false" >2024/08/05</string>
    <string name="next_sale_end" translatable="false" >2024/09/15</string>
    <string name="open_table_button">Open table</string>
    <string name="search">Search Elements</string>
    <string name="search_elements">Search For Elements</string>
    <string name="element_number">Element Number</string>
    <string name="blog">Blog</string>
    <string name="Tables">Tables</string>
    <string name="alphabetical">Alphabetical</string>
    <string name="Dictionary">Dictionary</string>
    <string name="New">New</string>
    <string name="display_mode">Display Mode</string>
    <string name="element_name_default">Element Name (Default)</string>
    <string name="atomic_weight">Atomic Weight</string>
    <string name="boiling_point">Boiling Point</string>
    <string name="melting_point">Melting Point</string>
    <string name="year_discovered">Year Discovered</string>
    <string name="fusion_heat">Fusion Heat</string>
    <string name="vaporization_heat">Vaporization Heat</string>
    <string name="poissons_ratio">Poisson\'s Ratio</string>
    <string name="youngs_modulus">Young\'s Modulus</string>
    <string name="bulk_modulus">Bulk Modulus</string>
    <string name="shear_modulus">Shear Modulus</string>
    <string name="electrical_resistivity">Electrical Resistivity</string>
    <string name="random_element">Random Element</string>
    <string name="pro_title">PRO Version</string>
    <string name="get_pro_title">Get PRO Version</string>
    <string name="pro_descr" >\'Atomic - Periodic Table\' is a free and open-source application made by me on my spare-time in Sweden. By purchasing the PRO-version you help support the development while also receiving additional data and features!</string>
    <string name="member_title">PRO Member Page</string>
    <string name="member_desch" >Thanks for supporting the development of \'Atomic - Periodic Table\'. On this page information about your PRO perks will be available as more PRO features get added.</string>
    <string name="member_already">You\'re a PRO member!</string>
    <string name="member_btn">Your PRO Perks</string>
    <string name="pro_get_more_out" >Get more out of Atomic</string>
    <string name="pro_features_title" >Features of PRO-Version:</string>
    <string name="pro_features_descr" >Explore some of the many features of the PRO-Version and what they include.</string>
    <string name="pro_upgrade_to_pro" >Upgrade to PRO</string>
    <string name="pro_additional_data" >Additional Data</string>
    <string name="pro_additional_data_descr" >Additional data such as hardness properties (mohs-, vickers-, and brinell hardness) as well as sound speed, Poisson Constant, Young\'s-, Bulk- and Shear modulus etc. Also information about identification of minerals.</string>
    <string name="pro_additional_tables" >Additional Tables</string>
    <string name="pro_additional_tables_descr" >Additional tables including a nuclide table, poisson\'s ratio table, constants table, geology table etc, with more coming in the future</string>
    <string name="pro_better_calculator" >Better Calculator</string>
    <string name="pro_better_calculator_descr" >An enhanced calculator with the possibility to save molar weights of different compounds in the favorite page.</string>
    <string name="pro_additional_flashcards">Additional Flashcards and Sync</string>
    <string name="pro_additional_flashcards_descr" translatable="false" >Access to additional flashcards, more lives and syncing of your progress</string>
    <string name="pro_additional_visualisations" >Additional Visualisations</string>
    <string name="pro_additional_visualisations_descr" >Access to more visualisations in the main table such as Poisson\'s Ratio, bulk modulus etc.</string>
    <string name="pro_already_purchased_title" >Already purchased Atomic - Periodic Table PRO?</string>
    <string name="pro_already_purchased_check" >Check product on account</string>
    <string name="pro_price_loading" >retrieving price...</string>
    <string name="pro_price_discount" >pro_price_discount</string>
    <string name="element_description_title">Description</string>
    <string name="element_more_title">Additional Properties</string>
    <string name="element_speed_sound">Speed of sound:</string>
    <string name="element_elastic_modulus">Elastic modulus:</string>
    <string name="element_young_modulus" >Young\'s modulus:</string>
    <string name="element_shear_modulus" >Shear modulus:</string>
    <string name="element_bulk_modulus" >Bulk modulus:</string>
    <string name="element_poisson_ratio">Poisson\'s ratio:</string>
    <string name="abundance_title" >Abundance</string>
    <string name="abundance_earth_crust" >In earth\'s crust</string>
    <string name="abundance_earth_soils" >In earth\'s soil</string>
    <string name="abundance_urban_soil" >In urban soil</string>
    <string name="abundance_sea_water" >In sea water</string>
    <string name="abundance_crustal_rocks" >In crustal rocks</string>
    <string name="abundance_sun" >In sun atoms</string>
    <string name="abundance_solar_system" >In solar system atoms</string>
    <string name="favorite_settings_title">Favorite Bar</string>
    <string name="favorite_settings_general">General</string>
    <string name="favorite_settings_temperatures">Temperatures</string>
    <string name="favorite_settings_atomic_properties">Atomic properties</string>
    <string name="favorite_settings_thermodynamics">Thermodynamic</string>
    <string name="favorite_settings_electromagnetic">Electromagnetic Properties</string>
    <string name="favorite_settings_nuclear">Nuclear</string>
    <string name="show_molar_mass" >Show Molar Mass</string>
    <string name="show_stp_phase" >Show STP Phase</string>
    <string name="show_electronegativity" >Show Electronegativity</string>
    <string name="show_density" >Show Density</string>
    <string name="kelvin" >Kelvin</string>
    <string name="celsius" >Celsius</string>
    <string name="fahrenheit" >Fahrenheit</string>
    <string name="show_boiling_point" >Show Boiling Point</string>
    <string name="show_melting_point" >Show Melting Point</string>
    <string name="show_atomic_radius_empirical" >Show Atomic Radius (Empirical)</string>
    <string name="show_atomic_radius_calculated" >Show Atomic Radius (Calculated)</string>
    <string name="show_covalent_radius" >Show Covalent Radius</string>
    <string name="show_van_der_waals_radius" >Show Van Der Waals Radius</string>
    <string name="show_resistivity" >Show Resistivity</string>
    <string name="show_fusion_heat" >Show Fusion Heat</string>
    <string name="show_specific_heat_capacity" >Show Specific Heat Capacity</string>
    <string name="show_vaporization_heat" >Show Vaporization Heat</string>
    <string name="show_if_radioactive" >Show if Radioactive element</string>
    <string name="sources_settings_title" >Sources</string>
    <string name="sources_wwe_title" >Water and Wastewater Engineering</string>
    <string name="sources_wwe_text" >Mackenzie L. Davis, (2019). Water and wastewater Engineering: Design Principles and Practise, second edition. ISBN: 978-1-260-13227-4</string>
    <string name="unit_settings_title">Table Units</string>
    <string name="unit_temperature">Temperatures</string>
    <string name="isotopes_title">Isotopes</string>
    <string name="iso_no_results" >No results</string>
    <string name="iso_try_another_search" >Try searching for another word or check your spelling.</string>
    <string name="iso_search_hint" >Search For Isotopes</string>
    <string name="ph_title">pH-Indicators</string>
    <string name="poi_no_results" >No results</string>
    <string name="poi_try_another_search" >Try searching for another word or check your spelling.</string>
    <string name="poi_search_hint" >Search For Dictionary Item</string>
    <string name="poi_clear_filter" >Clear Filter</string>
    <string name="poissons_ratio_title" >Poisson\'s Ratio</string>
    <string name="other_settings">Advanced</string>
    <string name="experimental_title">Experimental Settings</string>
    <string name="experimental_text">Additional experimental settings</string>
    <string name="clear_cache_title">Clear Cache</string>
    <string name="clear_cache_text">cache_size</string>
    <string name="submit_activity_title">Submit issue</string>
    <string name="submit_data_i">Data Issue</string>
    <string name="submit_bug">Bug</string>
    <string name="submit_question">Question</string>
    <string name="submit_issue">Issue</string>
    <string name="description">Description</string>
    <string name="submit_send">Submit issue</string>
    <string name="submit_title">Report Issue</string>
    <string name="submit_text">Report bugs and data errors</string>
    <string name="licenses_title">Licenses</string>
    <string name="licenses_text">Licenses of works used by Atomic</string>
    <string name="info_title">Information</string>
    <string name="info_text">App version and details</string>
    <string name="git_title" >Github</string>
    <string name="git_text" >Atomics open-source GitHub repo</string>
    <string name="table_order_title" >Sort table list</string>
    <string name="table_order_text" >Determine order of tables</string>
    <string name="win_title" >Get Desktop App</string>
    <string name="win_text" >Download the app for Windows</string>
    <string name="about_author_name" >J.LINDEMANN</string>
    <string name="about_app_name" >Atomic - Periodic Table</string>
    <string name="about_title" >About</string>
    <string name="settings_title" >Settings</string>
    <string name="settings_themes_title" >Themes</string>
    <string name="settings_themes_content" >Select Theme</string>
    <string name="settings_favorite_title" >Favorite Bar</string>
    <string name="settings_favorite_content" >Personalise the favorite bar</string>
    <string name="settings_order_title" >Detail Card Order</string>
    <string name="settings_order_content" >Customize order of Detail Cards</string>
    <string name="settings_unit_title" >Table Units</string>
    <string name="settings_unit_content" >Customize the units in the main table</string>
    <string name="settings_offline_title" >Offline Mode</string>
    <string name="settings_offline_content" >Disables loading of images</string>
    <string name="settings_nav_bar_title" >Auto-hide Bottombar</string>
    <string name="settings_nav_bar_content" >Disables the standard behaviour</string>
    <string name="language_title">Languages</string>
    <string name="language_content">Select Language</string>
    <string name="system_default">System Default</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="themes">Themes</string>
    <string name="select_theme">Select Theme</string>
    <string name="favorite_bar">Favorite Bar</string>
    <string name="personalise_favorite_bar">Personalise the favorite bar</string>
    <string name="detail_card_order">Detail Card Order</string>
    <string name="customize_detail_card_order">Customize order of Detail Cards</string>
    <string name="table_units">Table Units</string>
    <string name="credits_title">Credits</string>
    <string name="credits_giancarlo" translatable="false">Giancarlo Mérida</string>
    <string name="credits_giancarlo_info" translatable="false">Translations for Spanish and Italian</string>
    <string name="credits_electro_boy" translatable="false">ElectroBoy10</string>
    <string name="credits_electro_boy_info" translatable="false">Translations for Afrikaan</string>
</resources>