<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="?attr/backgroundColor"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/view_cre"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/backgroundColor"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent">

        <FrameLayout
            android:id="@+id/common_title_back_cre"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="?attr/colorSurface"
            android:elevation="1dp"
            android:gravity="center|center_vertical"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <FrameLayout
                android:id="@+id/common_title_back_cre_color"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/colorPrimary"
                android:elevation="1dp"
                android:alpha="0.11"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:orientation="vertical">

                <FrameLayout
                    android:id="@+id/title_box"
                    android:layout_width="match_parent"
                    android:layout_height="56dp">

                    <ImageButton
                        android:id="@+id/back_btn_cre"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:layout_gravity="center_vertical"
                        android:rotation="180"
                        android:elevation="8dp"
                        app:tint="?attr/colorOnPrimaryContainer"
                        android:src="@drawable/ic_arrow_back_whit" />

                    <TextView
                        android:id="@+id/credits_title"
                        android:layout_width="wrap_content"
                        android:layout_marginStart="70dp"
                        android:alpha="0.9"
                        android:layout_height="56dp"
                        android:gravity="center"
                        android:paddingStart="0dp"
                        android:paddingEnd="0dp"
                        android:text="@string/credits_title"
                        android:textAlignment="center"
                        android:textColor="?attr/colorOnSecondaryContainer"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </FrameLayout>

            </LinearLayout>
        </FrameLayout>

        <ScrollView
            android:id="@+id/credits_scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/credits_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/credits_title_downstate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="0dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="28dp"
                android:text="@string/credits_title"
                android:textColor="?attr/colorOnSurface"
                android:textSize="32sp"
                android:textStyle="normal" />

            <LinearLayout
                android:id="@+id/c_giancarlo"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_marginStart="@dimen/margin"
                android:orientation="vertical"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="@dimen/margin"
                android:layout_marginBottom="@dimen/margin_space_card"
                android:background="@drawable/toast"
                android:backgroundTint="?attr/colorSurfaceVariant"
                android:clickable="true"
                android:elevation="2dp"
                android:focusable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/margin"
                    android:layout_marginEnd="@dimen/margin"
                    android:layout_marginTop="@dimen/margin"
                    android:text="@string/credits_giancarlo"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="?attr/colorOnSurfaceVariant" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/margin"
                    android:layout_marginEnd="@dimen/margin"
                    android:text="@string/credits_giancarlo_info"
                    android:textColor="?attr/colorOnSurfaceVariant" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/c_electro_boy"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_marginStart="@dimen/margin"
                android:orientation="vertical"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="@dimen/margin"
                android:layout_marginBottom="@dimen/margin_space_card"
                android:background="@drawable/toast"
                android:backgroundTint="?attr/colorSurfaceVariant"
                android:clickable="true"
                android:elevation="2dp"
                android:focusable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/margin"
                    android:layout_marginEnd="@dimen/margin"
                    android:layout_marginTop="@dimen/margin"
                    android:text="@string/credits_electro_boy"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="?attr/colorOnSurfaceVariant" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/margin"
                    android:layout_marginEnd="@dimen/margin"
                    android:text="@string/credits_electro_boy_info"
                    android:textColor="?attr/colorOnSurfaceVariant" />
            </LinearLayout>


        </LinearLayout>
        </ScrollView>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>